3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:17:64: error: non-constant-expression cannot be narrowed from type 'int' to 'typename std::enable_if_t<(1 == 1), size_t>' (aka 'unsigned long') in initializer list [-Wc++11-narrowing]
   17 |     sycl::buffer<float, 1> x_old(x_init.data(), sycl::range<1>{n});
      |                                                                ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:17:64: note: insert an explicit cast to silence this issue
   17 |     sycl::buffer<float, 1> x_old(x_init.data(), sycl::range<1>{n});
      |                                                                ^
      |                                                                static_cast<type>( )
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:18:63: error: non-constant-expression cannot be narrowed from type 'int' to 'typename std::enable_if_t<(1 == 1), size_t>' (aka 'unsigned long') in initializer list [-Wc++11-narrowing]
   18 |     sycl::buffer<float, 1> x_new(x_tmp.data(), sycl::range<1>{n});
      |                                                               ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:18:63: note: insert an explicit cast to silence this issue
   18 |     sycl::buffer<float, 1> x_new(x_tmp.data(), sycl::range<1>{n});
      |                                                               ^
      |                                                               static_cast<type>( )
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:27:62: error: non-constant-expression cannot be narrowed from type 'int' to 'typename std::enable_if_t<(1 == 1), size_t>' (aka 'unsigned long') in initializer list [-Wc++11-narrowing]
   27 |             h.parallel_for<class jacobi_step>(sycl::range<1>{n}, [=](sycl::id<1> idx) {
      |                                                              ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:27:62: note: insert an explicit cast to silence this issue
   27 |             h.parallel_for<class jacobi_step>(sycl::range<1>{n}, [=](sycl::id<1> idx) {
      |                                                              ^
      |                                                              static_cast<type>( )
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:48:31: warning: 'get_access' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   48 |             auto Xc_h = x_new.get_access<sycl::access::mode::read>();
      |                               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/buffer.hpp:529:37: note: 'get_access' has been explicitly marked deprecated here
  529 |           accessor_property_list<>> get_access(const detail::code_location
      |                                     ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:48:31: warning: 'get_access<sycl::access::mode::read>' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   48 |             auto Xc_h = x_new.get_access<sycl::access::mode::read>();
      |                               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/buffer.hpp:523:3: note: 'get_access<sycl::access::mode::read>' has been explicitly marked deprecated here
  523 |   __SYCL2020_DEPRECATED("get_access for host_accessor is deprecated, please "
      |   ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:49:31: warning: 'get_access' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   49 |             auto Xp_h = x_old.get_access<sycl::access::mode::read_write>();
      |                               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/buffer.hpp:529:37: note: 'get_access' has been explicitly marked deprecated here
  529 |           accessor_property_list<>> get_access(const detail::code_location
      |                                     ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:49:31: warning: 'get_access<sycl::access::mode::read_write>' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   49 |             auto Xp_h = x_old.get_access<sycl::access::mode::read_write>();
      |                               ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/buffer.hpp:523:3: note: 'get_access<sycl::access::mode::read_write>' has been explicitly marked deprecated here
  523 |   __SYCL2020_DEPRECATED("get_access for host_accessor is deprecated, please "
      |   ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:64:26: warning: 'get_access' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   64 |         auto out = x_old.get_access<sycl::access::mode::read>();
      |                          ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/buffer.hpp:529:37: note: 'get_access' has been explicitly marked deprecated here
  529 |           accessor_property_list<>> get_access(const detail::code_location
      |                                     ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/3_acc_jacobi_oneapi/kuznetsov_mikhail/acc_jacobi_oneapi.cpp:64:26: warning: 'get_access<sycl::access::mode::read>' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   64 |         auto out = x_old.get_access<sycl::access::mode::read>();
      |                          ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/buffer.hpp:523:3: note: 'get_access<sycl::access::mode::read>' has been explicitly marked deprecated here
  523 |   __SYCL2020_DEPRECATED("get_access for host_accessor is deprecated, please "
      |   ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
6 warnings and 3 errors generated.
